proj1/test/test_11811806_2.out
Error type B at Line 3: Missing semicolon';'
Error type B at Line 6: Missing '}'
Error type B at Line 11: Missing ']'
Error type A at Line 13: unknown lexeme 00_main_1
Error type B at Line 14: Definition not match rules
